# query_generator

./: README.md  main.py  pyproject.toml  queries.txt  tables.xlsx
tests/: test_db_connector.py  test_queries_generator.py  test_read.py
utils/: db_connector.py  queries_generator.py  read.py
