[tool.poetry]
name = "query-generator"
version = "0.1.0"
description = ""
authors = ["Alex Alonso <alejandro.alonso@thedotcollective.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
